--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -9,7 +9,7 @@ body{
 }
 p{
   color: #4c4c4c;
-	font-size: 17px;
+	font-size: 15px;
 	line-height: 27px;
 }
 
@@ -27,6 +27,8 @@ h2{
 .station_info_cont{
 	background-color: #f5f4f4;
 	padding: 13px;
+	font-weight: 400;
+	color: #c4c4c4;
 }
 
 .comment_txt{
@@ -34,9 +36,13 @@ h2{
 	display: block;
 	margin-left: 20px;
 	font-family: sans-serif;
-	font-size: 14px;
-	margin-top: 20px;
-  width: 90%;
+	font-size: 17px;
+	margin-top: 33px;
+	line-height: 29px;
+	padding: 0 2px;
+	color: #4c4c4c;
+
+  width: 83%;
 	@media (min-width: 1024px) {
 		margin-left: 0;
 	}
@@ -105,6 +111,7 @@ h2{
 	font-size: 13px;
 	vertical-align: super;
 	color: #AC2424;
+  font-weight: 300;
 }
 
 .has-line{
@@ -329,16 +336,16 @@ h2{
 			}
 
 			ul{
-				padding: 20px 30px;;
+				padding: 0 30px;
 
 				li{
 					font-weight: 300;
 				  color: #4c4c4c;
-					font-size: 16px;
+					font-size: 13px;
 					line-height: 27px;
 					margin-bottom: 10px;
 					list-style-type:none;
-					color:black;
+			    font-weight: 400;
 					&:last-child{
 						margin-bottom: 0;
 					}
@@ -428,14 +435,35 @@ h2{
 			margin-top: 0;
 			margin-bottom: 30px;
 			margin-left: 20px;
+			&.info{
+				display: block;
+				background-color: #F4F4F4;
+		    padding: 10px 20px;
+		    display: block;
+		    box-sizing: border-box;
+    		width: 230px;
+		    font-size: 14px;
+		    line-height: 24px;
+				font-weight: 400;
+			}
+			.is-red{
+				display: block;
+				color:#AC2424;
+				font-weight: 400;
+				margin-bottom: 3px;
+			}
 
 			@media (min-width: 1024px) {
 				margin-left: 0;
 			}
 		}
 		.calendar_iframe{
-			border-width: 0;
-			width: 100%;
+			width: 102%;
+			margin-left: -4px;
+			@media (min-width: 1024px) {
+				border-width: 0;
+				width: 100%;
+			}
 		}
 	}
 
