--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -466,6 +466,7 @@ h2{
 		.calendar_iframe{
 			width: 102%;
 			margin-left: -4px;
+	    height: 50vh;
 			@media (min-width: 1024px) {
 				border-width: 0;
 				width: 100%;
