--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -5,7 +5,9 @@ body {
   font-weight: 400;
   height: 100%;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  width: 100vw;
+  overflow-x: hidden; }
 
 p {
   color: #4c4c4c;
@@ -174,9 +176,10 @@ h2 {
   .l-frame .full_image {
     object-fit: cover;
     height: 350px; }
-    @media (min-width: 1024px) {
+    @media (min-width: 528px) {
       .l-frame .full_image {
-        height: 900px; } }
+        height: calc(100vh - 93px);
+        width: 100vw; } }
   .l-frame .big_title {
     margin: 60px 0 40px 0;
     color: #4c4c4c;
@@ -341,28 +344,34 @@ h2 {
       .l-frame #schedule {
         width: 90%;
         margin: 0 auto; } }
-    .l-frame #schedule .calendar_txt {
-      margin-top: 0;
-      margin-bottom: 30px;
-      margin-left: 20px; }
-      .l-frame #schedule .calendar_txt.info {
-        display: block;
-        background-color: #F4F4F4;
-        padding: 10px 20px;
-        display: block;
-        box-sizing: border-box;
-        width: 230px;
-        font-size: 14px;
-        line-height: 24px;
-        font-weight: 400; }
-      .l-frame #schedule .calendar_txt .is-red {
-        display: block;
-        color: #AC2424;
-        font-weight: 400;
-        margin-bottom: 3px; }
-      @media (min-width: 1024px) {
-        .l-frame #schedule .calendar_txt {
-          margin-left: 0; } }
+    .l-frame #schedule .calendar_info_cont {
+      display: flex;
+      align-items: flex-end; }
+      .l-frame #schedule .calendar_info_cont .calendar_txt {
+        margin-top: 0;
+        margin-bottom: 30px;
+        margin-left: 20px;
+        margin-right: 10px;
+        padding-right: 10px;
+        font-size: 13px; }
+        .l-frame #schedule .calendar_info_cont .calendar_txt.info {
+          display: block;
+          background-color: #F4F4F4;
+          padding: 10px 20px;
+          display: block;
+          box-sizing: border-box;
+          width: 230px;
+          font-size: 14px;
+          line-height: 24px;
+          font-weight: 400; }
+        .l-frame #schedule .calendar_info_cont .calendar_txt .is-red {
+          display: block;
+          color: #AC2424;
+          font-weight: 400;
+          margin-bottom: 3px; }
+        @media (min-width: 1024px) {
+          .l-frame #schedule .calendar_info_cont .calendar_txt {
+            margin-left: 0; } }
     .l-frame #schedule .calendar_iframe {
       width: 102%;
       margin-left: -4px;
