--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -10,7 +10,7 @@ body {
   overflow-x: hidden; }
 
 p {
-  color: #4c4c4c;
+  color: #000;
   font-size: 15px;
   line-height: 27px; }
 
@@ -23,8 +23,53 @@ h2 {
   h2 .japaneseTitle {
     font-size: 17px; }
 
+.insta_cont {
+  height: 22px; }
+
+.insta_logo {
+  width: 24px;
+  margin-left: 4vw;
+  transition: all 0.5s ease;
+  fill: #000; }
+  @media (min-width: 1024px) {
+    .insta_logo {
+      width: 20px; } }
+  .insta_logo:hover svg {
+    fill: #4C4C4C; }
+
+.obs {
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 10px;
+  margin-top: 20px;
+  color: #4C4C4C;
+  padding-left: 1vw; }
+  @media (min-width: 1024px) {
+    .obs {
+      padding-left: 6vw; } }
+  .obs ul {
+    padding: 0 30px; }
+    .obs ul li {
+      font-weight: 300;
+      color: #4c4c4c;
+      font-size: 13px;
+      line-height: 27px;
+      margin-bottom: 10px;
+      list-style-type: none;
+      font-weight: 400; }
+      .obs ul li:last-child {
+        margin-bottom: 0; }
+      .obs ul li .is-red {
+        color: #AC2424; }
+
+.reservation_btn {
+  color: #fff;
+  text-decoration: none;
+  background-color: #212121;
+  padding: 10px 40px;
+  border-radius: 10px; }
+
 .station_info_cont {
-  background-color: #f5f4f4;
   padding: 13px;
   font-weight: 400;
   color: #c4c4c4; }
@@ -50,54 +95,31 @@ h2 {
     .comment_txt {
       margin-left: 0; } }
 
+.line_msg {
+  font-size: 12px;
+  margin-top: 13px; }
+
 .icons_cont {
   display: flex;
   flex-direction: row;
-  align-items: baseline;
-  margin-top: 63px;
-  justify-content: space-between; }
+  margin-top: 73px;
+  justify-content: flex-start; }
   @media (min-width: 1024px) {
     .icons_cont {
       margin-top: 33px;
       justify-content: flex-start; } }
-  .icons_cont .insta_logo {
-    width: 38px;
-    margin-left: 43px;
-    transition: all 0.5s ease; }
-    .icons_cont .insta_logo:hover {
-      filter: saturate(1.3); }
-  .icons_cont .line_btn {
-    display: flex;
-    flex-direction: row;
-    text-decoration: none;
-    align-items: center;
-    background-color: white;
-    position: relative;
-    border-radius: 2px;
-    border-radius: 3px;
-    background-color: #00c300;
-    border-radius: 10px;
-    width: 249px;
-    transition: all 0.2s ease; }
-    .icons_cont .line_btn .line_logo {
-      height: 40px;
-      margin-left: 10px; }
-    .icons_cont .line_btn .line_btn_txt {
-      font-weight: bold;
-      color: #fff;
-      letter-spacing: 2px;
-      font-family: 'Noto Sans JP', sans-serif;
-      transition: all 0.2s ease;
-      margin: 0 auto;
-      font-size: 14px; }
-    .icons_cont .line_btn:hover {
-      background-color: #00e000; }
-      .icons_cont .line_btn:hover .line_btn_txt {
-        color: #fff; }
+  .icons_cont .line_btn_cont {
+    width: 46px;
+    height: 46px;
+    margin-left: 40px; }
+    .icons_cont .line_btn_cont .line_btn {
+      width: 100%;
+      height: 100%; }
 
 .subtitle {
   color: #4c4c4c;
-  margin-top: 0; }
+  margin-top: 0;
+  font-weight: normal; }
 
 .small_font {
   font-size: 13px;
@@ -145,10 +167,10 @@ h2 {
     padding: 34px 6vw;
     display: flex;
     align-items: center;
-    padding: 0 4vw;
+    padding: 0 9vw;
     font-size: 18px;
     box-sizing: border-box;
-    justify-content: center;
+    justify-content: space-between;
     height: 80px; }
     @media (min-width: 1024px) {
       .l-frame .header {
@@ -170,9 +192,9 @@ h2 {
           margin-left: 4vw; }
           .l-frame .header .menu_item a {
             text-decoration: none;
-            color: #4c4c4c; }
+            color: black; }
             .l-frame .header .menu_item a:hover {
-              color: black; } }
+              color: #4c4c4c; } }
   .l-frame .full_image {
     object-fit: cover;
     height: 350px; }
@@ -181,28 +203,32 @@ h2 {
         height: calc(100vh - 93px);
         width: 100vw; } }
   .l-frame .big_title {
-    margin: 60px 0 40px 0;
+    margin: 30px 0 40px 0;
     color: #4c4c4c;
     text-align: center;
-    color: #E061B0;
-    text-transform: uppercase; }
+    color: #000000;
+    text-transform: uppercase;
+    font-weight: lighter; }
     @media (min-width: 1024px) {
       .l-frame .big_title {
-        margin-top: 100px; } }
+        margin-top: 50px; } }
   .l-frame #aboutme .aboutme_cont {
     display: flex;
     flex-direction: column;
+    padding: 100px 0;
+    padding: 10px 0;
     align-items: flex-start; }
     @media (min-width: 1024px) {
       .l-frame #aboutme .aboutme_cont {
+        padding: 40px 0 100px;
         flex-direction: row;
-        margin-left: 3vw; } }
+        padding-left: 3vw; } }
     .l-frame #aboutme .aboutme_cont .profile_pic {
-      width: 180px;
-      height: 180px;
+      width: 419px;
+      height: 290px;
       margin: 0 auto;
-      border-radius: 580px;
-      object-fit: cover; }
+      object-fit: cover;
+      filter: saturate(0.8) contrast(1.15); }
       @media (min-width: 1024px) {
         .l-frame #aboutme .aboutme_cont .profile_pic {
           width: 35%;
@@ -216,7 +242,7 @@ h2 {
       .l-frame #aboutme .aboutme_cont .infos .name_j {
         font-size: 24px;
         font-weight: 400;
-        color: #4c4c4c;
+        color: #000;
         margin-bottom: 0; }
       .l-frame #aboutme .aboutme_cont .infos .name_e {
         line-height: 0;
@@ -229,19 +255,22 @@ h2 {
           width: 50%;
           margin-top: 0; } }
       .l-frame #aboutme .aboutme_cont .infos > p {
-        line-height: 35px;
-        font-weight: 300; }
+        line-height: 29px;
+        font-weight: 300;
+        font-weight: normal; }
         @media (min-width: 1024px) {
           .l-frame #aboutme .aboutme_cont .infos > p {
             margin: 0;
             width: 90%;
-            line-height: 39.8px; } }
+            line-height: 26.8px; } }
       .l-frame #aboutme .aboutme_cont .infos .info {
         display: flex;
         flex-direction: row; }
   .l-frame #price, .l-frame #access {
+    margin-top: 50px;
     width: 85%;
-    margin: 0 auto; }
+    margin: 0 auto;
+    padding-bottom: 20px; }
     @media (min-width: 1024px) {
       .l-frame #price, .l-frame #access {
         width: 100%; } }
@@ -251,9 +280,13 @@ h2 {
     flex-direction: column;
     margin-top: 0;
     align-items: center; }
+    .l-frame .price_cont.last-row {
+      margin-top: 0px; }
+      @media (min-width: 1024px) {
+        .l-frame .price_cont.last-row {
+          margin-top: 100px; } }
     @media (min-width: 1024px) {
       .l-frame .price_cont {
-        margin-bottom: 70px;
         flex-direction: row;
         justify-content: space-evenly; } }
     .l-frame .price_cont.align-baseline {
@@ -261,33 +294,14 @@ h2 {
     .l-frame .price_cont .service {
       width: 100%;
       margin-bottom: 40px; }
+      .l-frame .price_cont .service.is-last {
+        margin-bottom: 10px; }
       @media (min-width: 1024px) {
         .l-frame .price_cont .service {
           width: 40%;
           margin-bottom: 0px; } }
       .l-frame .price_cont .service p .small-mobile {
         font-size: 0.8rem; }
-    .l-frame .price_cont .obs {
-      width: 100%;
-      background-color: #f3f3f3;
-      box-sizing: border-box; }
-      @media (min-width: 1024px) {
-        .l-frame .price_cont .obs {
-          width: 40%; } }
-      .l-frame .price_cont .obs ul {
-        padding: 0 30px; }
-        .l-frame .price_cont .obs ul li {
-          font-weight: 300;
-          color: #4c4c4c;
-          font-size: 13px;
-          line-height: 27px;
-          margin-bottom: 10px;
-          list-style-type: none;
-          font-weight: 400; }
-          .l-frame .price_cont .obs ul li:last-child {
-            margin-bottom: 0; }
-          .l-frame .price_cont .obs ul li .is-red {
-            color: #AC2424; }
   .l-frame #access .address_cont {
     align-items: flex-start;
     flex-direction: column;
@@ -299,30 +313,26 @@ h2 {
         justify-content: center; } }
     .l-frame #access .address_cont .title {
       font-size: 1.4rem;
-      color: #4c4c4c; }
+      color: #000; }
     .l-frame #access .address_cont .telephone {
       text-decoration: none;
-      color: #E061B0;
-      margin-top: 19px;
+      color: #4C4C4C;
       font-weight: 400;
       display: block;
-      font-size: 20px; }
+      font-size: 15px;
+      font-weight: 500; }
     .l-frame #access .address_cont .station_info {
-      font-size: 13px;
       line-height: 19px;
-      margin: 0; }
-      .l-frame #access .address_cont .station_info.is-gray {
-        background-color: gray; }
+      margin: 0;
+      font-weight: 500; }
     .l-frame #access .address_cont .address {
       margin: 40px auto 0 auto;
       width: 73%;
-      line-height: 24px; }
+      font-weight: 500; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont .address {
           width: 26%;
           margin: 0;
-          line-height: 29px;
-          font-weight: 300;
           margin-right: 80px; } }
     .l-frame #access .address_cont .subway_logo {
       margin-right: 10px;
@@ -339,11 +349,24 @@ h2 {
           height: 323px;
           margin: 21px 0 0 0; } }
   .l-frame #schedule {
-    padding: 0; }
+    padding: 0;
+    background-color: #F2F2F2;
+    padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    display: none; }
     @media (min-width: 1024px) {
       .l-frame #schedule {
-        width: 90%;
-        margin: 0 auto; } }
+        margin: 0 auto;
+        display: block; } }
+    .l-frame #schedule .aircalendar {
+      width: 90%;
+      height: 1000px; }
+      @media (min-width: 1024px) {
+        .l-frame #schedule .aircalendar {
+          width: 100%;
+          height: 1250px; } }
     .l-frame #schedule .calendar_info_cont {
       display: flex;
       align-items: flex-end; }
@@ -390,7 +413,7 @@ h2 {
     font-size: 15px;
     margin: 0 auto;
     text-align: center;
-    margin: 80px 0 30px 0; }
+    margin: 30px 0 30px 0; }
     @media (min-width: 1024px) {
       .l-frame .footer {
         margin: 80px 0 30px 0; } }
