--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -43,7 +43,8 @@ h2 {
   font-size: 10px;
   margin-top: 20px;
   color: #4C4C4C;
-  padding-left: 1vw; }
+  padding-left: 1vw;
+  margin-bottom: 80px; }
   @media (min-width: 1024px) {
     .obs {
       padding-left: 6vw; } }
@@ -242,14 +243,8 @@ h2 {
       .l-frame #aboutme .aboutme_cont .infos .name_j {
         font-size: 24px;
         font-weight: 400;
-        color: #000;
+        color: #1c1c1c;
         margin-bottom: 0; }
-      .l-frame #aboutme .aboutme_cont .infos .name_e {
-        line-height: 0;
-        font-size: 16px;
-        line-height: 29.8px;
-        margin-bottom: 20px;
-        margin-top: 0; }
       @media (min-width: 1024px) {
         .l-frame #aboutme .aboutme_cont .infos {
           width: 50%;
@@ -269,8 +264,7 @@ h2 {
   .l-frame #price, .l-frame #access {
     margin-top: 50px;
     width: 85%;
-    margin: 0 auto;
-    padding-bottom: 20px; }
+    margin: 0 auto; }
     @media (min-width: 1024px) {
       .l-frame #price, .l-frame #access {
         width: 100%; } }
@@ -302,52 +296,58 @@ h2 {
           margin-bottom: 0px; } }
       .l-frame .price_cont .service p .small-mobile {
         font-size: 0.8rem; }
-  .l-frame #access .address_cont {
-    align-items: flex-start;
-    flex-direction: column;
-    flex-direction: column-reverse; }
-    @media (min-width: 1024px) {
-      .l-frame #access .address_cont {
-        flex-direction: row;
-        width: 100%;
-        justify-content: center; } }
-    .l-frame #access .address_cont .title {
-      font-size: 1.4rem;
-      color: #000; }
-    .l-frame #access .address_cont .telephone {
-      text-decoration: none;
-      color: #4C4C4C;
-      font-weight: 400;
-      display: block;
-      font-size: 15px;
-      font-weight: 500; }
-    .l-frame #access .address_cont .station_info {
-      line-height: 19px;
-      margin: 0;
-      font-weight: 500; }
-    .l-frame #access .address_cont .address {
-      margin: 40px auto 0 auto;
-      width: 73%;
-      font-weight: 500; }
+  .l-frame #access {
+    background-color: #ececec;
+    width: 100%; }
+    .l-frame #access .address_cont {
+      align-items: flex-start;
+      flex-direction: column; }
       @media (min-width: 1024px) {
-        .l-frame #access .address_cont .address {
-          width: 26%;
-          margin: 0;
-          margin-right: 80px; } }
-    .l-frame #access .address_cont .subway_logo {
-      margin-right: 10px;
-      width: 23px;
-      padding-top: 7px; }
-      .l-frame #access .address_cont .subway_logo img {
-        width: 100%; }
-    .l-frame #access .address_cont .map {
-      width: 100vw;
-      height: 450px; }
-      @media (min-width: 1024px) {
-        .l-frame #access .address_cont .map {
-          width: 30%;
-          height: 323px;
-          margin: 21px 0 0 0; } }
+        .l-frame #access .address_cont {
+          flex-direction: row;
+          width: 100%;
+          justify-content: center;
+          align-items: flex-end;
+          margin-bottom: 80px; } }
+      .l-frame #access .address_cont .title {
+        font-size: 1.4rem;
+        color: #000; }
+      .l-frame #access .address_cont .telephone {
+        text-decoration: none;
+        color: #4C4C4C;
+        font-weight: 400;
+        display: block;
+        font-size: 15px;
+        font-weight: 500; }
+      .l-frame #access .address_cont .station_info {
+        line-height: 19px;
+        margin: 0;
+        font-weight: 500; }
+      .l-frame #access .address_cont .address {
+        margin: 0 auto 40px auto;
+        width: 88%;
+        font-weight: 500; }
+        .l-frame #access .address_cont .address .address_txt {
+          line-height: 20px; }
+        @media (min-width: 1024px) {
+          .l-frame #access .address_cont .address {
+            width: 26%;
+            margin: 0;
+            margin-left: 40px; } }
+      .l-frame #access .address_cont .subway_logo {
+        margin-right: 10px;
+        width: 23px;
+        padding-top: 7px; }
+        .l-frame #access .address_cont .subway_logo img {
+          width: 100%; }
+      .l-frame #access .address_cont .map {
+        width: 100vw;
+        height: 380px; }
+        @media (min-width: 1024px) {
+          .l-frame #access .address_cont .map {
+            width: 30%;
+            height: 323px;
+            margin: 21px 0 0 0; } }
   .l-frame #schedule {
     padding: 0;
     background-color: #F2F2F2;
@@ -410,7 +410,7 @@ h2 {
       .l-frame #instagram {
         width: 90%; } }
   .l-frame .footer {
-    font-size: 15px;
+    font-size: 13px;
     margin: 0 auto;
     text-align: center;
     margin: 30px 0 30px 0; }
