--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -54,6 +54,7 @@ h2{
 	margin-top: 20px;
 	color: #4C4C4C;
 	padding-left: 1vw;
+	margin-bottom: 80px;
 	@media (min-width: 1024px) {
 		padding-left: 6vw;
 	}
@@ -301,15 +302,8 @@ h2{
 				.name_j{
 					font-size: 24px;
 					font-weight: 400;
-					color: #000;
+					color: #1c1c1c;
 					margin-bottom: 0;
-				}
-				.name_e{
-					line-height: 0;
-					font-size: 16px;
-					line-height: 29.8px;
-					margin-bottom: 20px;
-					margin-top: 0;
 				}
 
 				@media (min-width: 1024px) {
@@ -339,7 +333,6 @@ h2{
 		margin-top: 50px;
 		width: 85%;
 		margin: 0 auto;
-		padding-bottom: 20px;
 		@media (min-width: 1024px) {
 			width: 100%;
 		}
@@ -389,14 +382,18 @@ h2{
 		}
 	}
 	#access{
+		background-color: #ececec;
+		width: 100%;
 		.address_cont{
 			align-items: flex-start;
 			flex-direction: column;
-			flex-direction: column-reverse;
+			// flex-direction: column-reverse;
 			@media (min-width: 1024px) {
 				flex-direction: row;
 				width: 100%;
 				justify-content: center;
+				align-items: flex-end;
+				margin-bottom: 80px;
 			}
 
 			.title{
@@ -418,13 +415,16 @@ h2{
 				font-weight:500;
 			}
 			.address{
-				margin: 40px auto 0 auto;
-    		width: 73%;
+				margin: 0 auto 40px auto;
+    		width: 88%;
 				font-weight:500;
+				.address_txt {
+					line-height: 20px;
+				}
 				@media (min-width: 1024px) {
 					width: 26%;
 					margin: 0;
-					margin-right: 80px;
+					margin-left: 40px;
 				}
 			}
 
@@ -439,7 +439,7 @@ h2{
 
 			.map{
 				width: 100vw;
-		    height: 450px;
+		    height: 380px;
 				@media (min-width: 1024px) {
 					width: 30%;
 			    height: 323px;
@@ -528,7 +528,7 @@ h2{
 	}
 
 	.footer{
-		font-size: 15px;
+		font-size: 13px;
 		margin: 0 auto;
 		text-align: center;
     margin: 30px 0 30px 0;
