--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -244,7 +244,7 @@ h2 {
         font-size: 24px;
         font-weight: 400;
         color: #1c1c1c;
-        margin-bottom: 0; }
+        margin-bottom: 30px; }
       @media (min-width: 1024px) {
         .l-frame #aboutme .aboutme_cont .infos {
           width: 50%;
