--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -303,7 +303,7 @@ h2{
 					font-size: 24px;
 					font-weight: 400;
 					color: #1c1c1c;
-					margin-bottom: 0;
+					margin-bottom: 30px;
 				}
 
 				@media (min-width: 1024px) {
