--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -268,6 +268,8 @@ h2 {
     @media (min-width: 1024px) {
       .l-frame #price, .l-frame #access {
         width: 100%; } }
+  .l-frame #price {
+    margin-top: 40px; }
   .l-frame .price_cont {
     width: 100%;
     display: flex;
@@ -328,7 +330,8 @@ h2 {
         width: 88%;
         font-weight: 500; }
         .l-frame #access .address_cont .address .address_txt {
-          line-height: 20px; }
+          line-height: 20px;
+          margin: 0 0 10px 0; }
         @media (min-width: 1024px) {
           .l-frame #access .address_cont .address {
             width: 26%;
