--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -337,6 +337,9 @@ h2{
 			width: 100%;
 		}
 	}
+	#price{
+		margin-top: 40px;
+	}
 
 	.price_cont{
 		width: 100%;
@@ -420,6 +423,7 @@ h2{
 				font-weight:500;
 				.address_txt {
 					line-height: 20px;
+					margin: 0 0 10px 0;
 				}
 				@media (min-width: 1024px) {
 					width: 26%;
