--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -50,7 +50,7 @@ h2{
 	width: 100%;
 	// background-color: #f3f3f3;
 	box-sizing: border-box;
-	font-size: 10px;
+	font-size: 9px;
 	margin-top: 20px;
 	color: #4C4C4C;
 	padding-left: 1vw;
@@ -413,16 +413,16 @@ h2{
 			}
 
 			.station_info{
-    		line-height: 19px;
+    		line-height: 21px;
 				margin: 0;
 				font-weight:500;
 			}
 			.address{
 				margin: 0 auto 40px auto;
-    		width: 88%;
+    		// width: 88%;
 				font-weight:500;
 				.address_txt {
-					line-height: 20px;
+					line-height: 21px;
 					margin: 0 0 10px 0;
 				}
 				@media (min-width: 1024px) {
