--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -303,11 +303,11 @@ h2 {
     width: 100%; }
     .l-frame #access .address_cont {
       align-items: flex-start;
-      flex-direction: column; }
+      flex-direction: column;
+      width: 100%; }
       @media (min-width: 1024px) {
         .l-frame #access .address_cont {
           flex-direction: row;
-          width: 100%;
           justify-content: center;
           align-items: flex-end;
           margin-bottom: 80px; } }
@@ -327,6 +327,7 @@ h2 {
         font-weight: 500; }
       .l-frame #access .address_cont .address {
         margin: 0 auto 40px auto;
+        width: 70%;
         font-weight: 500; }
         .l-frame #access .address_cont .address .address_txt {
           line-height: 21px;
