--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -309,8 +309,7 @@ h2 {
         .l-frame #access .address_cont {
           flex-direction: row;
           justify-content: center;
-          align-items: flex-end;
-          margin-bottom: 80px; } }
+          align-items: flex-end; } }
       .l-frame #access .address_cont .title {
         font-size: 1.4rem;
         color: #000; }
@@ -322,21 +321,31 @@ h2 {
         font-size: 15px;
         font-weight: 500; }
       .l-frame #access .address_cont .station_info {
-        line-height: 21px;
+        line-height: 18px;
         margin: 0;
-        font-weight: 500; }
+        font-weight: 500;
+        font-size: 13px; }
       .l-frame #access .address_cont .address {
-        margin: 0 auto 40px auto;
-        width: 70%;
-        font-weight: 500; }
+        width: 90vw;
+        margin: 0 auto 0 auto;
+        font-weight: 500;
+        padding: 50px 0;
+        text-align: center; }
         .l-frame #access .address_cont .address .address_txt {
-          line-height: 21px;
+          font-size: 13px;
+          line-height: 9px;
           margin: 0 0 10px 0; }
         @media (min-width: 1024px) {
           .l-frame #access .address_cont .address {
             width: 26%;
             margin: 0;
             margin-left: 40px; } }
+        .l-frame #access .address_cont .address .holiday {
+          line-height: 0px;
+          font-size: 13px;
+          margin-top: 20px; }
+          .l-frame #access .address_cont .address .holiday .is-red {
+            color: #C01816; }
       .l-frame #access .address_cont .subway_logo {
         margin-right: 10px;
         width: 23px;
@@ -419,4 +428,4 @@ h2 {
     margin: 30px 0 30px 0; }
     @media (min-width: 1024px) {
       .l-frame .footer {
-        margin: 80px 0 30px 0; } }
+        margin: 30px 0 30px 0; } }
