--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -396,7 +396,6 @@ h2{
 				flex-direction: row;
 				justify-content: center;
 				align-items: flex-end;
-				margin-bottom: 80px;
 			}
 
 			.title{
@@ -413,22 +412,35 @@ h2{
 			}
 
 			.station_info{
-    		line-height: 21px;
+    		line-height: 18px;
 				margin: 0;
 				font-weight:500;
+				font-size: 13px;
 			}
 			.address{
-				margin: 0 auto 40px auto;
-    		width: 70%;
+				width: 90vw;
+				margin: 0 auto 0 auto;
 				font-weight:500;
+				padding: 50px 0;
+				text-align: center;
+
 				.address_txt {
-					line-height: 21px;
+					font-size: 13px;
+					line-height: 9px;
 					margin: 0 0 10px 0;
 				}
 				@media (min-width: 1024px) {
 					width: 26%;
 					margin: 0;
 					margin-left: 40px;
+				}
+				.holiday{
+					line-height: 0px;
+					font-size: 13px;
+					margin-top: 20px;
+					.is-red{
+						color: #C01816;
+					}
 				}
 			}
 
@@ -537,7 +549,7 @@ h2{
 		text-align: center;
     margin: 30px 0 30px 0;
 		@media (min-width: 1024px) {
-	    margin: 80px 0 30px 0;
+	    margin: 30px 0 30px 0;
 		}
 
 	}
