update website price 2022

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -96,9 +96,12 @@ h2 {
     .comment_txt {
       margin-left: 0; } }
 
-.line_msg {
+.header_msg {
   font-size: 12px;
   margin-top: 13px; }
+  .header_msg.red_small {
+    color: #810f0f;
+    font-size: 10px; }
 
 .icons_cont {
   display: flex;
