update color text

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -9,6 +9,16 @@ body{
 	width: 100vw;
 	overflow-x: hidden;
 }
+span{
+	&.lineBreak{
+		display: inline;
+		@media (min-width: 1024px) {
+			display: none;
+		}
+	}	
+
+}
+
 p{
   color: #000;
 	font-size: 15px;
