--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -9,6 +9,12 @@ body {
   width: 100vw;
   overflow-x: hidden; }
 
+span.lineBreak {
+  display: inline; }
+  @media (min-width: 1024px) {
+    span.lineBreak {
+      display: none; } }
+
 p {
   color: #000;
   font-size: 15px;
